--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:scrollbarSize="1dp">
+	android:orientation="vertical">
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="2dp"
+		android:background="@color/black" />
 
 	<FrameLayout
 		android:id="@+id/container"
@@ -11,6 +15,11 @@
 		android:layout_height="wrap_content">
 
 	</FrameLayout>
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="2dp"
+		android:background="@color/black" />
 
 	<ScrollView
 		android:layout_width="match_parent"
@@ -28,6 +37,8 @@
 				android:id="@+id/tv_game_info"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:layout_margin="7sp"
+				android:layout_marginBottom="7sp"
 				android:textColor="@color/black" />
 
 			<View
@@ -93,6 +104,8 @@
 					<LinearLayout
 						android:layout_width="wrap_content"
 						android:layout_height="match_parent"
+						android:focusable="true"
+						android:focusableInTouchMode="true"
 						android:orientation="horizontal">
 
 						<EditText
