--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
@@ -25,7 +26,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:fadeScrollbars="false"
-		android:scrollbarSize="1dp"
+		android:scrollbarSize="2dp"
 		android:scrollbarThumbVertical="@color/black">
 
 		<LinearLayout
@@ -53,9 +54,9 @@
 
 				<HorizontalScrollView
 					android:layout_width="match_parent"
-					android:layout_height="match_parent"
+					android:layout_height="wrap_content"
 					android:fadeScrollbars="false"
-					android:scrollbarSize="1dp"
+					android:scrollbarSize="2dp"
 					android:scrollbarThumbHorizontal="@color/black">
 
 					<LinearLayout
@@ -96,9 +97,9 @@
 
 				<HorizontalScrollView
 					android:layout_width="match_parent"
-					android:layout_height="match_parent"
+					android:layout_height="wrap_content"
 					android:fadeScrollbars="false"
-					android:scrollbarSize="1dp"
+					android:scrollbarSize="2dp"
 					android:scrollbarThumbHorizontal="@color/black">
 
 					<LinearLayout
@@ -139,6 +140,47 @@
 
 					</LinearLayout>
 				</HorizontalScrollView>
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal">
+
+					<Button
+						android:id="@+id/btn_scale_down"
+						style="@style/Widget.AppCompat.Button.Colored"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="-"
+						android:textStyle="bold"
+						tools:ignore="HardcodedText" />
+
+					<TextView
+						android:id="@+id/tv_scale"
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_weight="1"
+						android:gravity="center"
+						android:textColor="@color/black"
+						android:textSize="36sp" />
+
+					<Button
+						android:id="@+id/btn_scale_up"
+						style="@style/Widget.AppCompat.Button.Colored"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="+"
+						android:textStyle="bold"
+						tools:ignore="HardcodedText" />
+
+					<Button
+						android:id="@+id/btn_scale_reset"
+						style="@style/Widget.AppCompat.Button.Colored"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/reset"
+						android:textStyle="bold" />
+				</LinearLayout>
 
 			</LinearLayout>
 
