--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
 	<FrameLayout
 		android:id="@+id/container"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content">
+		android:layout_height="wrap_content"
+		android:background="@color/black">
 
 	</FrameLayout>
 
@@ -108,6 +109,7 @@
 
 					<SeekBar
 						android:id="@+id/bar_alive_probability"
+						style="@style/Widget.AppCompat.SeekBar"
 						android:layout_width="match_parent"
 						android:layout_height="match_parent" />
 				</LinearLayout>
@@ -164,39 +166,17 @@
 					android:orientation="horizontal">
 
 					<Button
-						android:id="@+id/btn_scale_down"
+						android:id="@+id/btn_draw_scale"
 						style="@style/Widget.AppCompat.Button.Colored"
 						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="-"
-						android:textStyle="bold"
-						tools:ignore="HardcodedText" />
+						android:layout_height="wrap_content" />
 
-					<TextView
-						android:id="@+id/tv_scale"
+					<SeekBar
+						android:id="@+id/bar_draw_scale"
+						style="@style/Widget.AppCompat.SeekBar"
 						android:layout_width="0dp"
 						android:layout_height="match_parent"
-						android:layout_weight="1"
-						android:gravity="center"
-						android:textColor="@color/black"
-						android:textSize="36sp" />
-
-					<Button
-						android:id="@+id/btn_scale_up"
-						style="@style/Widget.AppCompat.Button.Colored"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="+"
-						android:textStyle="bold"
-						tools:ignore="HardcodedText" />
-
-					<Button
-						android:id="@+id/btn_scale_reset"
-						style="@style/Widget.AppCompat.Button.Colored"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/reset"
-						android:textStyle="bold" />
+						android:layout_weight="1" />
 				</LinearLayout>
 
 			</LinearLayout>
