--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,11 @@
 						android:layout_height="match_parent" />
 				</LinearLayout>
 
+				<View
+					android:layout_width="match_parent"
+					android:layout_height="2dp"
+					android:background="@color/black" />
+
 				<HorizontalScrollView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
@@ -132,7 +137,7 @@
 							android:id="@+id/et_coordinate_x"
 							style="@style/Widget.AppCompat.EditText"
 							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
+							android:layout_height="match_parent"
 							android:autofillHints="1"
 							android:hint="@string/coordinate_x"
 							android:inputType="number"
@@ -143,7 +148,7 @@
 							android:id="@+id/et_coordinate_y"
 							style="@style/Widget.AppCompat.EditText"
 							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
+							android:layout_height="match_parent"
 							android:autofillHints="1"
 							android:hint="@string/coordinate_y"
 							android:inputType="number"
@@ -159,6 +164,26 @@
 
 					</LinearLayout>
 				</HorizontalScrollView>
+
+				<View
+					android:layout_width="match_parent"
+					android:layout_height="2dp"
+					android:background="@color/black" />
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+					<ToggleButton
+						android:id="@+id/tbtn_scale_mode"
+						style="@style/Widget.AppCompat.Button.Colored"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textOff="@string/scale_mode_off"
+						android:textOn="@string/scale_mode_on" />
+
+				</LinearLayout>
 
 				<LinearLayout
 					android:layout_width="match_parent"
