--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 		android:background="@color/black" />
 
 	<FrameLayout
-		android:id="@+id/container"
+		android:id="@+id/fl_container"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:background="@color/black"/>
