--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -14,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             app:srcCompat="@drawable/ansdoship_logo"
             tools:ignore="ContentDescription" />
     </FrameLayout>
