--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="?attr/dialogPreferredPadding"
+    android:paddingRight="?attr/dialogPreferredPadding">
 
     <ImageView
         android:id="@+id/imageView"
@@ -85,7 +87,7 @@
         android:layout_marginLeft="7sp"
         android:layout_marginEnd="7sp"
         android:layout_marginRight="7sp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="?attr/dialogPreferredPadding"
         android:gravity="center_horizontal"
         android:text="@string/source_code_url_underlined"
         android:textColor="@android:color/holo_blue_dark"
